--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -1,5 +1,5 @@
 {
     "extensionDescription": {
-        "message": "Устанавливает SearXNG в качестве поисковой системы по умолчанию. Защитите свои запросы с мгновенным доступом к метапоисковой системе Searx."
+        "message": "Устанавливает SearXNG в качестве поисковой системы по умолчанию. Защитите свои запросы с мгновенным доступом к метапоисковой системе SearX."
     }
 }
