--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1,5 +1,5 @@
 {
     "extensionDescription": {
-        "message": "Adds SearXNG as the default search engine in your browser. Secure your queries with instant access to Searx metasearch engine."
+        "message": "Adds SearXNG as the default search engine in your browser. Secure your queries with instant access to SearX metasearch engine."
     }
 }
