--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -1,5 +1,5 @@
 {
     "extensionDescription": {
-        "message": "SearXNG als Standardsuchmaschine in Ihrem Browser hinzufügen."
+        "message": "SearXNG als Standardsuchmaschine in Ihrem Browser hinzufügen. Sikre dine forespørgsler med øjeblikkelig adgang til metasøgemaskinen SearX."
     }
 }
