--- a/_locales/uk/messages.json
+++ b/_locales/uk/messages.json
@@ -1,5 +1,5 @@
 {
     "extensionDescription": {
-        "message": "Встановлює SearXNG у якості пошукової системи за замовчанням."
+        "message": "Встановлює SearXNG у якості пошукової системи за замовчанням. Захистіть свої запити за допомогою миттєвого доступу до двигуна SearX."
     }
 }
